# noc-is-platform

./: .deployignore  .dockerignore  .gcloudignore  .gitignore  .replit  Dockerfile  build.sh  cloudbuild.yaml  package-lock.json  package.json  pyproject.toml  replit.md  run_server.sh  start.py  start.sh
attached_assets/: Pasted--ADDENDUM-NDC-NETWORK-DIAGNOSTIC-1772328979917_1772328979918.txt  Pasted--ADDENDUM-VISUAL-DESIGN-REVISION--1772303741193_1772303741193.txt  Pasted--MASTER-DATA-CRUD-MANAGEMENT-N-1772276440444_1772276440444.txt  Pasted--PROJECT-SETUP-SCHEMA-NOC-IS-A-1772274745076_1772274745076.txt  Pasted--PROMPT-0-PLATFORM-FOUNDATION--1772273414893_1772273414893.txt  Pasted--PROMPT-00-R-REPLIT-ENVIRONMENT-A-1772305285969_1772305285969.txt  Pasted--PROMPT-10-DASHBOARD-OVERVIEW-R-1772294512325_1772294512325.txt  Pasted--PROMPT-11-SAVED-VIEWS-COMPARIS-1772301834801_1772301834802.txt  Pasted--PROMPT-12-REPORT-GENERATOR-EXP-1772302816421_1772302816422.txt  Pasted--PROMPT-5-EXTERNAL-DATA-ENRICHMEN-1772289821925_1772289821926.txt  Pasted--PROMPT-6-PROFILER-CORE-IDENTITA-1772290790694_1772290790694.txt  Pasted--PROMPT-7-PROFILER-TEMPORAL-TREN-1772291699389_1772291699390.txt  Pasted--PROMPT-8-PROFILER-GANGGUAN-CROS-1772292375094_1772292375095.txt  Pasted--PROMPT-9-PROFILER-PREDIKTIF-RIS-1772293270040_1772293270040.txt  Pasted--SITE-MASTER-ENRICHMENT-DATA-MANA-1772288740637_1772288740638.txt  Pasted--UPLOAD-PROCESSING-ENGINE-NOC--1772275419603_1772275419603.txt
backend/: .env.example  _app_factory.py  app.py  config.py  database.py  jobs.py  main.py  requirements.txt
(+185 files in other folders)
