[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "duckdb>=1.4.4",
    "fastapi>=0.134.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "weasyprint>=68.1",
]
